rds.tf
resource "aws_db_instance" "tf_rds_instance" {
  allocated_storage      = 10
  db_name                = "moy_demo" # name of database to create
  identifier             = "nodejs-rds"
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = ""
  parameter_group_name   = "default.mysql8.0"
  db_subnet_group_name = aws_db_subnet_group.rds_subnet_group.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id] # attach RDS security group
  skip_final_snapshot    = true
  publicly_accessible    = true
}

resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds-subnet-group"
  subnet_ids = [
    "",
    ""#Here you create one subnet, because you already have one, and assign the other to a different AZ
    ]
}


resource "aws_security_group" "rds_sg" {
  vpc_id      = "" # default VPC
  name        = "allow_mysql"
  description = "Allow MySQL traffic"

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    cidr_blocks     = ["189.215.50.133/32"]           # local IP address
    security_groups = [aws_security_group.tf_ec2_sg.id] # Allow traffic from EC2 security group
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] # Allow all outbound traffic
  }
}


# local variables
locals {
  rds_endpoint = element(split(":", aws_db_instance.tf_rds_instance.endpoint), 0)
}


# outputs
output "rds_instance_endpoint" {
  value = aws_db_instance.tf_rds_instance.endpoint
}
output "rds_db_name" {
  value = aws_db_instance.tf_rds_instance.db_name
}
output "rds_username" {
  value = aws_db_instance.tf_rds_instance.username
}
output "rds_pass" {
  value     = aws_db_instance.tf_rds_instance.password
  sensitive = true
}
